<resources>
    <string name="app_name" translatable="false">DNA Detec</string>

    <string name="text_cancel">Cancel</string>
    <string name="text_accept">Accept</string>
    <string name="text_username">Username</string>
    <string name="text_password">Password</string>
    <string name="text_sign_in">Sign in</string>
    <string name="text_sign_up_login"><u>Sign up</u></string>
    <string name="text_login_error">Username or password invalid.</string>
    <string name="text_please_enter_username">Please enter username.</string>
    <string name="text_please_enter_password">Please enter password.</string>
    <string name="text_invalid_password">Invalid password.</string>
    <string name="text_no_internet">Can\'t connect to Internet.</string>
    <string name="text_close">Close</string>
    <string name="text_press_to_exit">Press once again to exit.</string>
    <string name="text_staff_name_thai_english">Staff Name (Thai/English)</string>
    <string name="text_confirm_password">Confirm Password</string>
    <string name="txt_invalid_data">Invalid data.</string>
    <string name="text_please_enter_fullname">Please enter your staff name.</string>
    <string name="text_please_confirm_password">Please confirm your password.</string>
    <string name="text_confirm_pass_not_match">Confirm password not match.</string>
    <string name="text_sign_up_successful">Sign up successful.</string>
    <string name="text_edit">Edit</string>
    <string name="text_change_password">Change password</string>
    <string name="text_header_sign_up">Sign up</string>
    <string name="text_language">Language</string>
    <string name="text_english">English</string>
    <string name="text_thai">Thai</string>
    <string name="text_sign_out">Sign out</string>
    <string name="text_sign_out_dialog">Do you want to sign out?</string>
    <string name="text_yes">Yes</string>
    <string name="text_no">No</string>
    <string name="text_project_name">Project Name</string>
    <string name="text_location">Location</string>
    <string name="text_stem">Stem</string>
    <string name="text_temperature">Temperature (°C)</string>
    <string name="text_timing_minute">Timer duration</string>
    <string name="text_analytic">Analytic</string>
    <string name="text_result">Result</string>
    <string name="text_take_a_photo">Take a Photo</string>
    <string name="text_timer">Timer</string>
    <string name="text_profile">Profile</string>
    <string name="text_setting">Setting</string>
    <string name="text_please_enter_project_name">Please enter project name.</string>
    <string name="text_please_enter_place">Please enter a place.</string>
    <string name="text_please_enter_disease">Please enter stem.</string>
    <string name="text_please_enter_some_detail">Please enter some detail.</string>
    <string name="text_please_enter_temp">Please enter temperature.</string>
    <string name="text_please_enter_time">Please enter time for timer.</string>
    <string name="text_please_enter_time_more_than_zero">Please enter time more than 0.</string>
    <string name="text_add_analytic_sucessful">Add analytic successful.</string>
    <string name="text_confirm">Confirm</string>
    <string name="text_timer_value">%02d : %02d : %02d</string>
    <string name="text_reset">Reset</string>
    <string name="text_countdown_finish">Countdown finish.</string>
    <string name="text_check_status">Check :</string>
    <string name="text_result_status">Result :</string>
    <string name="text_check_waiting">Waiting</string>
    <string name="text_check_checked">Checked</string>
    <string name="text_result_empty">-</string>
    <string name="text_result_positive">Positive</string>
    <string name="text_result_negative">Negative</string>
    <string name="text_time_unit_hour">%d Hour %d Minute %d Second</string>
    <string name="text_time_unit_minute">%d Minute %d Second</string>
    <string name="text_time_unit_sec">%d Second</string>
</resources>
