<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
    tools:context=".activities.AnalyticActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/bg_login_1"
            android:tint="@color/colorBlue4"
            android:tintMode="multiply" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/buttonBack"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="4dp"
                    android:src="@drawable/baseline_arrow_back_white_48" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/kanit"
                    android:text="@string/text_analytic"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/text_size_5xl" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/shape_tr_login"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/editProjectName"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginHorizontal="40dp"
                    android:layout_marginTop="40dp"
                    android:textCursorDrawable="@null"
                    android:background="@drawable/shape_rect_gray"
                    android:drawableStart="@drawable/baseline_assignment_24"
                    android:drawablePadding="8dp"
                    android:fontFamily="@font/kanit"
                    android:hint="@string/text_project_name"
                    android:inputType="text"
                    android:lines="1"
                    android:maxLines="1"
                    android:paddingHorizontal="@dimen/editText_padding"
                    android:textSize="@dimen/text_fixed_size_l" />


                <EditText
                    android:id="@+id/editLocation"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginHorizontal="40dp"
                    android:layout_marginTop="32dp"
                    android:textCursorDrawable="@null"
                    android:background="@drawable/shape_rect_gray"
                    android:drawableStart="@drawable/baseline_location_on_24"
                    android:drawablePadding="8dp"
                    android:fontFamily="@font/kanit"
                    android:hint="@string/text_location"
                    android:inputType="text"
                    android:lines="1"
                    android:maxLines="1"
                    android:paddingHorizontal="@dimen/editText_padding"
                    android:textSize="@dimen/text_fixed_size_l" />

                <EditText
                    android:id="@+id/editStem"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginHorizontal="40dp"
                    android:layout_marginTop="32dp"
                    android:background="@drawable/shape_rect_gray"
                    android:drawableStart="@drawable/baseline_local_hospital_24"
                    android:drawablePadding="8dp"
                    android:textCursorDrawable="@null"
                    android:fontFamily="@font/kanit"
                    android:hint="@string/text_stem"
                    android:inputType="text"
                    android:lines="1"
                    android:maxLines="1"
                    android:paddingHorizontal="@dimen/editText_padding"
                    android:textSize="@dimen/text_fixed_size_l" />

                <EditText
                    android:id="@+id/editTemperature"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginHorizontal="40dp"
                    android:layout_marginTop="32dp"
                    android:background="@drawable/shape_rect_gray"
                    android:drawableStart="@drawable/baseline_wb_sunny_24"
                    android:drawablePadding="8dp"
                    android:textCursorDrawable="@null"
                    android:fontFamily="@font/kanit"
                    android:hint="@string/text_temperature"
                    android:inputType="text"
                    android:lines="1"
                    android:maxLines="1"
                    android:paddingHorizontal="@dimen/editText_padding"
                    android:textSize="@dimen/text_fixed_size_l" />

                <EditText
                    android:id="@+id/editTime"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginHorizontal="40dp"
                    android:layout_marginTop="32dp"
                    android:background="@drawable/shape_rect_gray"
                    android:drawableStart="@drawable/baseline_timer_24"
                    android:drawablePadding="8dp"
                    android:textCursorDrawable="@null"
                    android:focusable="false"
                    android:inputType="none"
                    android:fontFamily="@font/kanit"
                    android:hint="@string/text_timing_minute"
                    android:lines="1"
                    android:maxLines="1"
                    android:paddingHorizontal="@dimen/editText_padding"
                    android:textSize="@dimen/text_fixed_size_l" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="40dp"
                    android:layout_marginTop="32dp"
                    android:paddingVertical="12dp"
                    android:paddingHorizontal="@dimen/editText_padding"
                    android:background="@drawable/shape_rect_gray"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:src="@drawable/baseline_library_books_24"/>

                    <EditText
                        android:id="@+id/editProjectDetail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:fontFamily="@font/kanit"
                        android:hint="Project Detail"
                        android:textCursorDrawable="@null"
                        android:inputType="textMultiLine"
                        android:background="@android:color/transparent"
                        android:lines="5"
                        android:gravity="top"
                        android:textSize="@dimen/text_fixed_size_l" />

                </LinearLayout>


                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <LinearLayout
                    android:id="@+id/buttonConfirm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_margin="16dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/kanit"
                        android:text="Confirm"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/text_size_l" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="2dp"
                        android:src="@drawable/baseline_arrow_forward_black_24" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </FrameLayout>

</ScrollView>