<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="12dp"
    android:layout_marginVertical="10dp"
    android:layout_marginHorizontal="20dp"
    android:background="@drawable/shape_rect_white_4dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="120dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <LinearLayout
        app:layout_constraintStart_toEndOf="@id/imageView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Name"
            android:fontFamily="@font/kanit_medium"
            android:lines="1"
            android:maxLines="1"
            android:ellipsize="end"
            android:textSize="@dimen/text_size_l"
            android:textColor="@color/colorBlack"
            />

        <TextView
            android:id="@+id/textDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Details"
            android:fontFamily="@font/kanit"
            android:lines="1"
            android:layout_marginTop="4dp"
            android:maxLines="1"
            android:ellipsize="end"
            android:textSize="@dimen/text_size_s"
            android:textColor="@color/colorBlack"
            />

        <TextView
            android:id="@+id/textDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Date"
            android:fontFamily="@font/kanit"
            android:lines="1"
            android:layout_marginTop="4dp"
            android:maxLines="1"
            android:ellipsize="end"
            android:textSize="@dimen/text_size_s"
            android:textColor="@color/colorBlack"
            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/kanit_medium"
                android:text="@string/text_check_status"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/text_size_s" />

            <TextView
                android:id="@+id/textCheck"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:fontFamily="@font/kanit"
                android:text="@string/text_check_waiting"
                android:textColor="@color/colorRed"
                android:textSize="@dimen/text_size_s" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/kanit_medium"
                android:text="@string/text_result_status"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/text_size_s" />

            <TextView
                android:id="@+id/textResultPositive"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:fontFamily="@font/kanit"
                android:text="•"
                android:textColor="@color/colorRed"
                android:textSize="@dimen/text_size_xxl" />

        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>