<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlue4"
    android:fillViewport="true"
    android:scrollbars="none"
    tools:context=".activities.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            android:src="@drawable/bg_login_1"
            android:tint="@color/colorBlue4"
            android:tintMode="multiply"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/llLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:paddingVertical="16dp">

            <ImageView
                android:id="@+id/imageLogo"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/logo"
                app:layout_constraintBottom_toTopOf="@+id/constraintLayout" />

            <TextView
                android:id="@+id/textAppName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/kanit_medium"
                android:text="@string/app_name"
                android:layout_marginTop="16dp"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_size_5xl" />

        </LinearLayout>

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/shape_tl_reverse_login"
            app:layout_constraintBottom_toTopOf="@id/constraintLayout"
            app:layout_constraintStart_toStartOf="parent"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_tr_login"
            android:paddingHorizontal="32dp"
            android:paddingVertical="64dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0">

            <FrameLayout
                android:id="@+id/flUserIcon"
                android:layout_width="58dp"
                android:layout_height="50dp"
                android:background="@drawable/shape_tl_bl_4_rect_gray"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/baseline_person_black_24" />


            </FrameLayout>

            <EditText
                android:id="@+id/editUsername"
                android:textCursorDrawable="@null"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginLeft="4dp"
                android:background="@drawable/shape_tr_br_4_rect_gray"
                android:fontFamily="@font/kanit"
                android:hint="@string/text_username"
                android:inputType="text"
                android:lines="1"
                android:textSize="@dimen/text_fixed_size_l"
                android:maxLines="1"
                android:paddingHorizontal="@dimen/editText_padding"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/flUserIcon"
                app:layout_constraintTop_toTopOf="parent" />

            <FrameLayout
                android:id="@+id/flPasswordIcon"
                android:layout_width="58dp"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/shape_tl_bl_4_rect_gray"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/flUserIcon">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/baseline_lock_black_24" />


            </FrameLayout>

            <LinearLayout
                android:id="@+id/llPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/shape_tr_br_4_rect_gray"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/flPasswordIcon"
                app:layout_constraintTop_toBottomOf="@id/editUsername">

                <EditText
                    android:id="@+id/editPassword"
                    android:textCursorDrawable="@null"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:textSize="@dimen/text_fixed_size_l"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/kanit"
                    android:hint="@string/text_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:paddingLeft="@dimen/all_page_padding_16"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/flUserIcon"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/imageViewPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:layout_marginHorizontal="16dp"
                    android:src="@drawable/baseline_visibility_black_24" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llSignin"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="4dp"
                android:background="@drawable/shape_btn_blue_4dp"
                android:elevation="2dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingHorizontal="32dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/textSignUp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/flPasswordIcon">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/kanit_medium"
                    android:text="@string/text_sign_in"
                    android:textSize="@dimen/text_size_l"
                    android:textColor="@color/colorWhite" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:src="@drawable/baseline_arrow_forward_white_18" />

            </LinearLayout>

            <TextView
                android:id="@+id/textSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="4dp"
                android:fontFamily="@font/kanit"
                android:textSize="@dimen/text_size_l"
                android:text="@string/text_sign_up_login"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/llSignin"
                app:layout_constraintTop_toBottomOf="@id/llPassword" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>